--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,8 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        
+
 
         {
             "name": "Python: Current File",
@@ -11,8 +13,7 @@
             "request": "launch",
             "program": "/home/trojrobert/Documents/Thesis/CCT_MixMatch/train.py",
             "console": "integratedTerminal",
-            "args": ["--config=configs/config.json"],
-            "cwd": "${/home/trojrobert/Documents/Thesis/CCT_MixMatch}"
+            "args": ["--config=configs/config.json"]
 
         }
     ]
